{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 35,
  "lineage": "4076a2c0-6340-7e6e-d856-33f63ebb9803",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03a3bdf7bc7b087fb",
            "association_id": "eipassoc-0f09c9d06b4474c1f",
            "domain": "vpc",
            "id": "eipalloc-03a3bdf7bc7b087fb",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0eae0c8d07c26fe50",
            "private_dns": "ip-10-0-1-86.ec2.internal",
            "private_ip": "10.0.1.86",
            "public_dns": "ec2-3-233-54-58.compute-1.amazonaws.com",
            "public_ip": "3.233.54.58",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_instance",
      "name": "management_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08e637cea2f053dfa",
            "arn": "arn:aws:ec2:us-east-1:051897547177:instance/i-0885c979dd3bafa56",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0885c979dd3bafa56",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "newAccount-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e63689b63259d858",
            "private_dns": "ip-10-0-1-84.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.84",
            "public_ip": "18.212.148.66",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ee242b0b2cc46af4",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00bba54ff3786701c",
            "tags": {
              "Name": "management_server"
            },
            "tags_all": {
              "Name": "management_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fc77e9334e4de095"
            ]
          },
          "dependencies": [
            "module.network.aws_key_pair.my_key",
            "module.network.aws_security_group.allow_ssh",
            "module.network.aws_subnet.management_subnet",
            "module.network.aws_vpc.your_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051897547177:internet-gateway/igw-0cb3ac88c9e9a5be7",
            "id": "igw-0cb3ac88c9e9a5be7",
            "owner_id": "051897547177",
            "tags": {
              "Name": "internet-gate-way"
            },
            "tags_all": {
              "Name": "internet-gate-way"
            },
            "vpc_id": "vpc-009aec9f8b307adc7"
          },
          "dependencies": [
            "module.network.aws_vpc.your_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03a3bdf7bc7b087fb",
            "connectivity_type": "public",
            "id": "nat-06bac161dcf4c3d43",
            "network_interface_id": "eni-0eae0c8d07c26fe50",
            "private_ip": "10.0.1.86",
            "public_ip": "3.233.54.58",
            "subnet_id": "subnet-00bba54ff3786701c",
            "tags": {
              "Name": "gw NAT1"
            },
            "tags_all": {
              "Name": "gw NAT1"
            }
          },
          "dependencies": [
            "module.network.aws_eip.ip1",
            "module.network.aws_subnet.management_subnet",
            "module.network.aws_vpc.your_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "igw_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cb3ac88c9e9a5be7",
            "id": "r-rtb-07a23bf02562dc1f31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07a23bf02562dc1f3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_vpc.your_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fdaf15619d2ae4441080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06bac161dcf4c3d43",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fdaf15619d2ae444",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_nat_gateway.nat_public",
            "module.network.aws_route_table.private_route_table"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051897547177:route-table/rtb-0fdaf15619d2ae444",
            "id": "rtb-0fdaf15619d2ae444",
            "owner_id": "051897547177",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06bac161dcf4c3d43",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "private-route-table"
            },
            "tags_all": {
              "name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-009aec9f8b307adc7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.your_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051897547177:route-table/rtb-07a23bf02562dc1f3",
            "id": "rtb-07a23bf02562dc1f3",
            "owner_id": "051897547177",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cb3ac88c9e9a5be7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "public-route-table"
            },
            "tags_all": {
              "name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-009aec9f8b307adc7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.your_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_ass_routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1cba0263dc5c6aa",
            "route_table_id": "rtb-0fdaf15619d2ae444",
            "subnet_id": "subnet-087109225a8e121f6"
          },
          "dependencies": [
            "module.network.aws_route_table.private_route_table",
            "module.network.aws_subnet.restricted_subnet",
            "module.network.aws_vpc.your_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_ass_routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0901cb14e8ea4e371",
            "route_table_id": "rtb-07a23bf02562dc1f3",
            "subnet_id": "subnet-00bba54ff3786701c"
          },
          "dependencies": [
            "module.network.aws_route_table.public_route_table",
            "module.network.aws_subnet.management_subnet",
            "module.network.aws_vpc.your_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051897547177:security-group/sg-0fc77e9334e4de095",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fc77e9334e4de095",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "051897547177",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-009aec9f8b307adc7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.your_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051897547177:security-group/sg-04adb0c99fbff8e18",
            "description": "Allow SSH bastion inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04adb0c99fbff8e18",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "SSH from bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_bastion",
            "name_prefix": "",
            "owner_id": "051897547177",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_bastion"
            },
            "tags_all": {
              "Name": "allow_ssh_bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-009aec9f8b307adc7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.your_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "scg_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051897547177:security-group/sg-03b9bc9cde40e2b96",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03b9bc9cde40e2b96",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230325060956475200000007",
            "name_prefix": "terraform-",
            "owner_id": "051897547177",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-009aec9f8b307adc7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.your_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "management_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051897547177:subnet/subnet-00bba54ff3786701c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00bba54ff3786701c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "051897547177",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "management-subnet"
            },
            "tags_all": {
              "Name": "management-subnet"
            },
            "vpc_id": "vpc-009aec9f8b307adc7"
          },
          "dependencies": [
            "module.network.aws_vpc.your_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "restricted_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051897547177:subnet/subnet-087109225a8e121f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087109225a8e121f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "051897547177",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "restricted-subnet"
            },
            "tags_all": {
              "Name": "restricted-subnet"
            },
            "vpc_id": "vpc-009aec9f8b307adc7"
          },
          "dependencies": [
            "module.network.aws_vpc.your_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "your_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051897547177:vpc/vpc-009aec9f8b307adc7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0792da010c12648f3",
            "default_route_table_id": "rtb-04e31726becaa25ae",
            "default_security_group_id": "sg-08db05dbdbf5831e8",
            "dhcp_options_id": "dopt-0bd390941829a1816",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-009aec9f8b307adc7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04e31726becaa25ae",
            "owner_id": "051897547177",
            "tags": {
              "Name": "final-vpc"
            },
            "tags_all": {
              "Name": "final-vpc"
            }
          }
        }
      ]
    }
  ]
}